Fix missing padding between side-content text and vertical scrollbar

--- a/src/styles/_workspace.scss
+++ b/src/styles/_workspace.scss
@@ -229,6 +229,8 @@ $code-color-error: #ff4444;
     color: $code-color-result;
     text-align: justify;
     overflow-x: auto;
+    /* Respect padding of containing bp3 Card when scrollable */
+    margin-bottom: 0.4rem;
 
     div {
       p:last-child {
@@ -315,7 +317,6 @@ $code-color-error: #ff4444;
   .side-content-tabs {
     flex: 1 1 auto;
     height: 100%;
-    overflow-y: auto;
     justify-content: center;
     display: flex;
 
